@@ -1,2 +1,0 @@
-order deny,allow
-deny from all
